fix(look&feel): description spacing in CheckboxSelect

--- a/client/look-and-feel/css/src/Form/Checkbox/Checkbox.scss
+++ b/client/look-and-feel/css/src/Form/Checkbox/Checkbox.scss
@@ -13,6 +13,12 @@
     gap: 1rem;
   }
 
+  &__label-container {
+    display: flex;
+    flex-direction: column;
+    row-gap: calc(4 / var(--font-size-base) * 1rem);
+  }
+
   &__label {
     font-size: common.rem(18);
     font-weight: 600;
